# job_bot

./: .gitignore  .pylintrc  LICENSE  README.md  debug_log.txt  deptry_output.txt  pipeline.py  pyproject.toml  requirements.gpu.txt  requirements.txt  requirements_cleaned.txt:Zone.Identifier  requirments.txt  setup.py  temp notes to fix adding lease fields.txt  temp notes.txt
documents_private/: Quick notes.docx  Similarity Score Analysis.xlsx  how to test different prompts.html  job bot project notes.docx  pipeline control.xlsx  temp notes.docx  ~$b bot project notes.docx  ~$ick notes.docx
job_bot/: bootstrap_env.py  check_files_viewer.ipynb  data_analysis.ipynb  duckdb_tools.ipynb  load_pre_trained_models.py  logging_config.py  main.py  main_compute_sim_metrics_selected_files.py  main_cross_tab.py  main_docx_to_json.py  main_duckdb_ingestion.py  main_edit_selected_files.py  main_file_based_etl.py  main_fsm_driven_duckdb.py  main_human_review.py  main_sync_control_tbl.py  pipeline_config.py  project_config.py  sort_urls_json_file.py  temp_holders.py  temp_tools.ipynb  test_flatten_models.py  test_flatten_rehydrate_standalone.py  test_random_stuff.py  testing.py  testing_1.py  testing_2.py  verify_cuda.py  verify_ds_model_load.py
src/: Amazon_Product_Manager__Artificial_General_Intelligence_-_Data_Services.csv  Amazon_Research_Manager_-_Strategy_and_Insights_GCA_Marketing.csv  Amazon_Sr._Generative_AI_Strategist__Generative_AI_Innovation_Center.csv  Capital_One_Director__AI_Platforms.csv  Google_AI_Market_Intelligence_Principal.csv  Meta_Product_Strategy_Lead.csv  (+49 more)
(+294 files in other folders)
